# downloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Findcpr.cmake  Findlibcurl.cmake  Findxcpr.cmake  Findxlibcurl.cmake  Findxzlib.cmake  Findzlib.cmake  __Findcpr.cmake
example/: CMakeLists.txt  example.cpp
include/: base_error.hpp  downloader.h  uerror.h
src/: base_error.cpp  base_error.hpp  downloader.cpp  downloader.hpp  range.hpp  range_file.hpp  uerror.cpp
tools/: CMakeLists.txt  README.md  download.cpp
